[gd_scene load_steps=8 format=3 uid="uid://bkr80g22y78fw"]

[ext_resource type="Script" uid="uid://dbbb7vchxqmda" path="res://scenes/ui/level_up_popup/level_up_card.gd" id="1_ggdq3"]
[ext_resource type="Texture2D" uid="uid://dg8vplvbg21n3" path="res://scenes/ui/level_up_popup/asset/sprite/Screenshot 2023-08-21 222316.png" id="2_t30hr"]
[ext_resource type="StyleBox" uid="uid://5fy4l7hmdqsa" path="res://scenes/ui/level_up_popup/res/button_style/card_button/level_up_card_normal.tres" id="3_qqdw6"]
[ext_resource type="ButtonGroup" uid="uid://bysaf8n2psac0" path="res://scenes/ui/level_up_popup/res/button_group/button_group_level_up_card.tres" id="3_t30hr"]
[ext_resource type="StyleBox" uid="uid://dpoygmxsuwowv" path="res://scenes/ui/level_up_popup/res/button_style/card_button/level_up_card_pressed.tres" id="4_gchq8"]
[ext_resource type="StyleBox" uid="uid://daunxa0me1fis" path="res://scenes/ui/level_up_popup/res/button_style/card_button/level_up_card_hover.tres" id="5_gchq8"]
[ext_resource type="AudioStream" uid="uid://c2r1k3c750unt" path="res://scenes/ui/level_up_popup/asset/sfx/switch-button.mp3" id="5_qqdw6"]

[node name="level_up_card" type="PanelContainer" node_paths=PackedStringArray("label_name", "label_description", "button_component")]
clip_contents = true
custom_minimum_size = Vector2(150, 175)
offset_right = 100.0
offset_bottom = 163.0
pivot_offset = Vector2(75, 87)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ggdq3")
label_name = NodePath("margin_container/v_box_container/panel_container/label_name")
label_description = NodePath("margin_container/v_box_container/label_description")
button_component = NodePath("button")

[node name="margin_container" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="v_box_container" type="VBoxContainer" parent="margin_container"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="panel_container" type="PanelContainer" parent="margin_container/v_box_container"]
layout_mode = 2
theme_type_variation = &"alternate_panel_container"

[node name="label_name" type="Label" parent="margin_container/v_box_container/panel_container"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.14901961, 0.16862746, 0.26666668, 1)
theme_override_colors/font_outline_color = Color(0.14901961, 0.16862746, 0.26666668, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 16
text = "Sword Attack Rate"
horizontal_alignment = 1
vertical_alignment = 2
clip_text = true

[node name="texture_rect" type="TextureRect" parent="margin_container/v_box_container"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_t30hr")
expand_mode = 2
stretch_mode = 6

[node name="label_description" type="Label" parent="margin_container/v_box_container"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.14901961, 0.16862746, 0.26666668, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 16
text = "Increase sword damage by 15%"
autowrap_mode = 3

[node name="button" type="Button" parent="."]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_qqdw6")
theme_override_styles/pressed = ExtResource("4_gchq8")
theme_override_styles/hover = ExtResource("5_gchq8")
toggle_mode = true
button_group = ExtResource("3_t30hr")

[node name="audio_stream_player_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qqdw6")
bus = &"SFX"
